--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.4",
     "next": "14.2.5",
     "prisma": "^5.18.0",
     "react": "^18",
