--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.1.0",
     "@tanstack/react-query": "^5.51.23",
+    "@types/bcryptjs": "^2.4.6",
+    "arctic": "^1.9.2",
     "axios": "^1.7.4",
+    "bcryptjs": "^2.4.3",
+    "lucia": "^3.2.0",
     "next": "14.2.5",
     "prisma": "^5.18.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
