--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "arctic": "^1.9.2",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.3.28",
     "lucia": "^3.2.0",
     "next": "14.2.5",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
