--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "recoil": "^0.7.7",
     "sharp": "^0.33.4",
     "zod": "^3.23.8"
