--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@tanstack/react-query": "^5.51.23",
     "@types/bcryptjs": "^2.4.6",
     "arctic": "^1.9.2",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
+    "blurhash-base64": "^0.0.3",
     "framer-motion": "^11.3.28",
     "lucia": "^3.2.0",
     "next": "14.2.5",
     "nextjs-toploader": "^1.6.12",
     "prisma": "^5.18.0",
     "react": "^18",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18",
     "react-responsive": "^10.0.0",
     "recoil": "^0.7.7",
     "sharp": "^0.33.5",
+    "stripe": "^16.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
