--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "blurhash-base64": "^0.0.3",
     "framer-motion": "^11.3.28",
     "lucia": "^3.2.0",
+    "lucide-react": "^0.447.0",
     "next": "14.2.5",
     "nextjs-toploader": "^1.6.12",
     "prisma": "^5.18.0",
